--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Antool is a web collection of information on paid or free Design and
             Development tools
           </p>
-          <form>
+          <form class="hero-search">
             <input type="find more than 430+ tools..." /><button>Search</button>
           </form>
 
@@ -207,12 +207,15 @@
       </section>
       <section class="newcomer-tools">
         <div class="container newcomer-tools-container">
-          <h3 class="newcomer-tools-title">Newcomer Tools</h3>
-          <p class="newcomer-tools-description">
-            Wow! see the latest update of the most recommended tools from
-            reliable designers and developers
-          </p>
-          <button class="newcomer-tools-button">Explore more</button>
+          <div class="newcomer-tools-body">
+            <h3 class="newcomer-tools-title">Newcomer Tools</h3>
+            <p class="newcomer-tools-description">
+              Wow! see the latest update of the most recommended tools from
+              reliable designers and developers
+            </p>
+            <button class="newcomer-tools-button">Explore more</button>
+          </div>
+
           <ul class="newcomer-tools-list">
             <li class="newcomer-tools-item">
               <article class="newcomer-tools-atricle">
@@ -287,18 +290,17 @@
       </section>
 
       <section class="mentors">
-        <div class="container">
-          <article class="mentors-article">
-            <div class="mentors-container">
-              <img
-                class="mentors-image"
-                src="./src/img/Group 1434.png"
-                alt=""
-              />
-            </div>
-
-            <h5 class="mentors-name">Ronald Richards</h5>
-            <p class="mentors-role">Product Manager</p>
+        <div class="container mentors-container">
+      <div class="mentors-body">
+        <article class="mentors-article">
+          <div class="mentors-container">
+            <img
+              class="mentors-image"
+              src="./src/img/Group 1434.png"
+              alt=""
+            />
+          </div>
+      </div>
             <h6 class="mentors-discription">
               Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
               reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do
@@ -311,22 +313,24 @@
         </div>
       </section>
       <section class="subscribe">
-        <div class="container">
+        <div class="container subscribe-container">
           <h2 class="subscribe-title">Become a contributor?</h2>
           <h3 class="subscribe-subtitle">
             Join us and get tips & tricks to become a great Designer and
             Developer
           </h3>
-          <input type="text" />
+          <form class="subscribe-button-input">
+            <input type="" /><button class="subscribe-button">Join Us</button>
+          </form>
           <button class="subscribe-button">Join Us</button>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <ul class="footer-list">
           <li class="footer-item">
-            <a class="footer" href="/index.html">antools.</a>
+            <a class="footer-logo" href="/index.html">antools.</a>
           </li>
           <li class="footer-copyright">Copyright 2021. Antools</li>
           <p class="footer-description">
